--- a/app/src/zhihu/Cathy/main.css
+++ b/app/src/zhihu/Cathy/main.css
@@ -8,13 +8,11 @@ body{
     background: #b8e5f8;
     overflow-x:hidden;
     overflow-y:hidden;
-}
-.bg-img{
-    width: 1920px;
-    height: 1350px;
     background:url("./img/bg.png") center top no-repeat;
-    position: absolute;
+    width: 100%;
+    height:100%;
 }
+
 .content{
     width: 430px;
     height: auto;
@@ -207,4 +205,24 @@ body{
 }
 .rigbox{
     display: none;
+}
+
+.register-content{
+    display: none;
+    display: block;
+    width: 560px;
+    height:300px;
+    position: absolute;
+    left:50%;
+    top:50%;
+    transform: translate(-50%,-50%);
+}
+.login-content{
+    display: block;
+    width: 560px;
+    height:300px;
+    position: absolute;
+    left:50%;
+    top:50%;
+    transform: translate(-50%,-50%);
 }
