--- a/app/src/zhihu/Cathy/main.css
+++ b/app/src/zhihu/Cathy/main.css
@@ -33,7 +33,7 @@ body{
     height: 65px;
     margin-bottom: 20px;
 }
-.login .slogn{
+.login .slogan{
     font-size: 22px;
     color: #0084ff;
     text-align: center;
